Added data stuff for loading/saving map, player stuff not added yet

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -3,8 +3,10 @@ cmake_minimum_required(VERSION 3.10)
 project(parser)
 
 add_executable(parser
-  ${CMAKE_CURRENT_LIST_DIR}/src/tester.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/data_parser.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/data_save.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/data_types.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/tester.cpp
 )
 
 target_include_directories(parser PUBLIC
