--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -15,9 +15,6 @@ add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl/renderer.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl/texture.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl/window.cpp
-
-  ${CMAKE_CURRENT_LIST_DIR}/../data/src/data_save.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/../data/src/data_types.cpp
 )
 
 target_include_directories(game PUBLIC
@@ -25,10 +22,14 @@ target_include_directories(game PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/src/core
   ${CMAKE_CURRENT_LIST_DIR}/src/map
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl
-  ${CMAKE_CURRENT_LIST_DIR}/../data/src
+  ${CMAKE_CURRENT_LIST_DIR}/../data/include
 )
 
-target_link_libraries(game SDL2 SDL2_image)
+target_link_directories(game PUBLIC
+  ${CMAKE_CURRENT_LIST_DIR}/../data/lib
+)
+
+target_link_libraries(game sbbdata SDL2 SDL2_image)
 
 set_target_properties(game PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
 
