--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.10)
 
 project(game)
 
-# The data stuff should be made into a shared library
 add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
 
@@ -16,6 +15,9 @@ add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl/texture.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl/window.cpp
 )
+
+# Find SDL headers
+find_file(SDL2_INCLUDE_DIR NAME SDL.h HINTS SDL2)
 
 target_include_directories(game PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/src
