--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -6,7 +6,9 @@ add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
 
   ${CMAKE_CURRENT_LIST_DIR}/src/core/core.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/core/core_manager_manager.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/core/core_object.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/core/core_object_manager.cpp
 
   ${CMAKE_CURRENT_LIST_DIR}/src/map/map.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/map/tile.cpp
@@ -16,15 +18,14 @@ add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl/window.cpp
 )
 
-# Find SDL headers
-find_file(SDL2_INCLUDE_DIR NAME SDL.h HINTS SDL2)
-
+# Ignore the /usr/include/SDL2 part, my VIM is messed up :(
 target_include_directories(game PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/src
   ${CMAKE_CURRENT_LIST_DIR}/src/core
   ${CMAKE_CURRENT_LIST_DIR}/src/map
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl
   ${CMAKE_CURRENT_LIST_DIR}/../data/include
+  /usr/include/SDL2
 )
 
 target_link_directories(game PUBLIC
