Added player and directions

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -10,6 +10,9 @@ add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/core/core_object.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/core/core_object_manager.cpp
 
+  ${CMAKE_CURRENT_LIST_DIR}/src/player/player_manager.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/player/player_object.cpp
+
   ${CMAKE_CURRENT_LIST_DIR}/src/map/map.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/map/tile.cpp
 
@@ -23,6 +26,7 @@ target_include_directories(game PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/src
   ${CMAKE_CURRENT_LIST_DIR}/src/core
   ${CMAKE_CURRENT_LIST_DIR}/src/map
+  ${CMAKE_CURRENT_LIST_DIR}/src/player
   ${CMAKE_CURRENT_LIST_DIR}/src/sdl
   ${CMAKE_CURRENT_LIST_DIR}/../data/include
   /usr/include/SDL2
