Data: Organized artifacts better

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -26,12 +26,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(parser)
 
 add_executable(parser
-  ${CMAKE_CURRENT_LIST_DIR}/src/data_parser.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/src/parser.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/parser/data_parser.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/parser/parser.cpp
 )
 
 target_include_directories(parser PUBLIC
-  ${CMAKE_CURRENT_LIST_DIR}/src
+  ${CMAKE_CURRENT_LIST_DIR}/parser
   ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
@@ -41,12 +41,12 @@ set_target_properties(parser PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
 project(builder)
 
 add_executable(builder
-  ${CMAKE_CURRENT_LIST_DIR}/src/data_default_builder.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/src/default_builder.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/builder/data_default_builder.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/builder/default_builder.cpp
 )
 
 target_include_directories(builder PUBLIC
-  ${CMAKE_CURRENT_LIST_DIR}/src
+  ${CMAKE_CURRENT_LIST_DIR}/builder
   ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
