Game: Added Entities and Components to Core | Fixed hashing errors

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -11,7 +11,10 @@ add_executable(game
 
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/entity.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/components/component.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/ecs/components/render_component.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/components/transform_component.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/ecs/systems/render_system.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/ecs/systems/system.cpp
 )
 
 # Ignore the /usr/include/SDL2 part, my VIM is messed up :(
@@ -24,6 +27,7 @@ target_include_directories(game PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/src/core
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/components
+  ${CMAKE_CURRENT_LIST_DIR}/src/ecs/systems
 
   ${CMAKE_CURRENT_LIST_DIR}/../data/include
   ${CMAKE_CURRENT_LIST_DIR}/../sdlw/include
