--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(game
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/components/transform_component.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/systems/render_system.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/systems/system.cpp
+
+  ${CMAKE_CURRENT_LIST_DIR}/src/scenes/test_scene.cpp
 )
 
 # Ignore the /usr/include/SDL2 part, my VIM is messed up :(
@@ -30,6 +32,7 @@ target_include_directories(game PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/components
   ${CMAKE_CURRENT_LIST_DIR}/src/ecs/systems
+  ${CMAKE_CURRENT_LIST_DIR}/src/scenes
 
   ${CMAKE_CURRENT_LIST_DIR}/../data/include
   ${CMAKE_CURRENT_LIST_DIR}/../sdlw/include
