--- a/ffm/builder/CMakeLists.txt
+++ b/ffm/builder/CMakeLists.txt
@@ -14,6 +14,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 
 target_link_directories(${PROJECT_NAME} PUBLIC
   ${CMAKE_CURRENT_LIST_DIR}/../data/lib
+  ${CMAKE_CURRENT_LIST_DIR}
 )
 
 target_link_libraries(${PROJECT_NAME} ffmdata)
