--- a/game/ALL_BUILD.vcxproj.filters
+++ b/game/ALL_BUILD.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CustomBuild Include="C:\Users\JJ\Documents\GitHub\Skidibidibop\game\CMakeLists.txt" />
+    <CustomBuild Include="C:\Users\Mihir\Downloads\Skidibidibop-master(4)\Skidibidibop-master\game\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
